Fri Sep 24 18:13:45 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* Makefile.am: add missing variable
	* libxslt/transform.c: fixed some error callback data
	* tests/exslt/date/Makefile.am tests/exslt/date/sum*: added new
	  date:sum testing from Derek Poon

Fri Sep 24 09:17:22 PDT 2004 William Brack <wbrack@mmm.com.hk>

	* libexslt/date.c: fixed problem with empty sets, etc.
	  (see discussion on mailing list)

Sat Sep 18 17:08:31 PDT 2004 William Brack <wbrack@mmm.com.hk>

	* libexslt/date.c: fixed problem with timezone offset
	  (bug 153000)
	* tests/exslt/date/add.1.out: changed regression test output,
	  which was apparently incorrect for above case

Sat Sep 18 00:04:02 PDT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c: re-arranged sequence of setting up
	  namespaces within xsltCopyTree (see the list thread
	  http://mail.gnome.org/archives/xml/2004-September/msg00072.html)
	* tests/general/bug-104.out: slight change to expected output
	  due to above fix

Fri Sep 17 23:15:33 PDT 2004 William Brack <wbrack@mmm.com.hk>

	* libexslt/date.c: enhanced validation of date-time to catch
	  bit-field overflow (bug 152836)
	* tests/exslt/date/date.2.*, tests/exslt/time.2.*: added test
	  cases for above

Tue Sep  7 18:04:55 PDT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/numbers.c: further refinement to UTF8 pattern
	  separator (bug 151975)

Tue Sep  7 00:14:12 PDT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/numbers.c: fixed problem with UTF8 pattern
	  separator (bug 151975)

Mon Sep  6 14:27:38 PDT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/imports.c, libxslt/xslt.c, libxslt/xsltInternals.h:
	  fixed 2 problems with xsl:include (bug #151795)

Tue Aug 31 15:45:42 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* NEWS configure.in doc/*: Release of libxslt-1.1.10

Tue Aug 31 11:41:11 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* doc/xsltproc.1 doc/xsltproc.xml: added missing descriptions