@@ -1,0 +1,4 @@
+<xsl:transform version="1.0"
+xmlns:xsl="http://www.w3.org/1999/XSL/Transform" xmlns:test="#">
+<xsl:variable name="test:foo" select="'abc'"/>
+</xsl:transform>
